fix(ui) decrease the row gap to 16px

--- a/front-end/src/pages/Milestone/Milestone.module.css
+++ b/front-end/src/pages/Milestone/Milestone.module.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  row-gap: 22px;
+  row-gap: 16px;
   box-sizing: border-box;
 }
 
@@ -51,7 +51,7 @@
   justify-content: space-between;
   align-items: center;
   background: transparent;
-  border: 2px solid #1d2b4dda;
+  border-bottom: 2px solid #1d2b4dda;
   padding: 10px;
 }
 
